attemp to add multi-detecting